# VLM

./: .gitignore  History.md  README.md  pyproject.toml
configs/: clip-vitb16-qwen-external-10k-qformer-distilbert-itc-stage0.json  clip-vitb16-qwen-external-10k-qformer-distilbert-itc-to-llm-stage1-epoch1.json  dinov3-local-vits16-qwen-external-10k-adapter-stage1-epoch1.json  dinov3-local-vits16-qwen-external-10k-adapter-stage1.json  dinov3-local-vits16-qwen-external-10k-qformer-distilbert-itc-stage0.json  dinov3-local-vits16-qwen-external-10k-qformer-distilbert-itc-to-llm-stage1-epoch1.json  dinov3-local-vits16-qwen-external-10k-qformer-distilbert-itc-to-llm-stage1-epoch3.json  dinov3-local-vits16-qwen-external-10k-qformer-distilbert-itc-to-llm-stage2-lora-epoch1.json  dinov3-local-vits16-qwen-qformer-distilbert-itc-smoke.json  dinov3-local-vits16-qwen-qformer-distilbert-itc-to-llm-smoke.json  dinov3-local-vits16-qwen-smoke.json  dinov3-local-vits16-qwen-wikimedia-1k-adapter-stage1.json  dinov3-mini-vlm-smoke.json  dinov3-mini-vlm.json  open-vision-qwen-smoke.json  siglip-vitb16-qwen-external-10k-qformer-distilbert-itc-stage0.json  siglip-vitb16-qwen-external-10k-qformer-distilbert-itc-to-llm-stage1-epoch1.json
docs/: .pdca-status.json
mini_vlm/: __init__.py  config.py
tests/: test_collator.py  test_compare_vision_ablation.py  test_config.py  test_dataset.py  test_device.py  test_dinov3_integration.py  test_dinov3_local_backend.py  test_evaluation_dashboard.py  test_evaluation_helpers.py  test_external_dataset_builder.py  test_forward.py  test_generation_contract.py  (+7 more)
(+59 files in other folders)
